<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id= "@+id/income_this_month_text"
        android:text="@string/summary_income_text"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id= "@+id/income_this_month"
        android:textSize="20sp"
        android:layout_marginBottom="25dp"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id= "@+id/expense_this_month_text"
        android:text="@string/summary_expense_text"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id= "@+id/expense_this_month"
        android:textSize="20sp"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id= "@+id/total_saving_amount_text"
        android:text="@string/summary_saving_text"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id= "@+id/total_saving_amount"
        android:textSize="20sp"
        android:layout_marginBottom="25dp"/>







</LinearLayout>